[package]
name = "MiraMigrator"
description = "One-click migration tool for Minecraft mod versions."
homepage = "https://github.com/Anhecio/MiraMigrator"
repository = "https://github.com/Anhecio/MiraMigrator"
version = "1.0.0"
license = "LGPL-3.0-only"
edition = "2024"
readme = "README.md"
authors = ["Lumira <2301385546@qq.com>"]

[dependencies]
regex = "1.8.5"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
sanitize-filename = "0.6.0"
serde_json = "1.0.140"
toml = "0.8.22"
zip = "3.0.0"
